[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ufc-stats"
version = "0.1.0"
description = "UFC Stats API wrapper for fighter data, fights, and events"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "requests>=2.28",
    "plotly>=5.0",
]

[project.optional-dependencies]
dev = ["pytest", "ipykernel"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
